manifests.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    app.kubernetes.io/instance: dev
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/name: blog
    app.kubernetes.io/part-of: blog
  name: blog-dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/component: web
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/name: blog
    app.kubernetes.io/part-of: blog
  name: blog
  namespace: blog-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: blog
  template:
    metadata:
      labels:
        app.kubernetes.io/component: web
        app.kubernetes.io/name: blog
    spec:
      containers:
      - image: ghcr.io/stianfro/blog:0.1.1
        livenessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 10
        name: web
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /healthz
            port: http
          initialDelaySeconds: 5
          periodSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 128Mi
          requests:
            cpu: 50m
            memory: 64Mi
        securityContext:
          allowPrivilegeEscalation: false
          capabilities:
            drop:
            - ALL
          readOnlyRootFilesystem: true
          runAsNonRoot: true
          runAsUser: 101
        volumeMounts:
        - mountPath: /var/cache/nginx
          name: cache
        - mountPath: /var/run
          name: run
        - mountPath: /tmp
          name: tmp
      securityContext:
        seccompProfile:
          type: RuntimeDefault
      volumes:
      - emptyDir: {}
        name: cache
      - emptyDir: {}
        name: run
      - emptyDir: {}
        name: tmp
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/name: blog
    app.kubernetes.io/part-of: blog
  name: blog
  namespace: blog-dev
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: blog
  type: ClusterIP
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/managed-by: kargo
    app.kubernetes.io/part-of: blog
  name: blog
  namespace: blog-dev
spec:
  hostnames:
  - blog.talos.froystein.jp
  parentRefs:
  - name: eg
    namespace: envoy-gateway-system
  rules:
  - backendRefs:
    - name: blog
      port: 80
